trunk/OldArchive/14518a15b2107ae3d9b0439b43712298-3cc51038acdf411e9e246d8e44b62017/output
+ clang++ -O2 -pthread main.cpp
main.cpp:10:8: error: non-aggregate type 'Foo' cannot be initialized with an initializer list
   Foo o = {1, 2};
       ^   ~~~~~~
1 error generated.
